[project]
name = "waveform_controller"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pika>=1.3.2",
    "pre-commit>=4.5.0",
    "psycopg2-binary>=2.9.11",
]

[project.scripts]
emap-extract-waveform = "waveform_controller.controller:receiver"
